Front And Data In Progress

--- a/ResumeMvc/Views/Shared/Components/PersonalInformations/PersonalInformations.cshtml
+++ b/ResumeMvc/Views/Shared/Components/PersonalInformations/PersonalInformations.cshtml
@@ -8,7 +8,7 @@
                 <div class="content-center">
                     <div class="cc-profile-image"><a href="#"><img src="~/Images/cv.png" alt="Image" /></a></div>
                     <div class="h2 title">@Model.Name</div>
-                    <p class="category text-white">@Model.Title</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                    <p class="category text-white">@Model.Title</p>
                 </div>
             </div>
 
