--- a/ResumeMvc/Views/Shared/Components/Links/Links.cshtml
+++ b/ResumeMvc/Views/Shared/Components/Links/Links.cshtml
@@ -1,18 +1,30 @@
-﻿<div class="section">
+﻿@model List<ResumeMvc.ViewModels.LinkViewModel>
+
+<div class="section">
     <div class="container">
         <div class="button-container">
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook">
-                <i class="fa fa-facebook"></i>
-            </a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter">
-                <i class="fa fa-twitter"></i>
-            </a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+">
-                <i class="fa fa-google-plus"></i>
-            </a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram">
-                <i class="fa fa-instagram"></i>
-            </a>
+            @foreach (var item in Model)
+            {
+                switch (item.Title)
+                {
+                    case "LinkedIn":
+                        <a class="btn btn-default btn-round btn-lg btn-icon" href="@item.Url" rel="tooltip" title="Follow me on @item.Title">
+                            <i class="fa fa-facebook"></i>
+                        </a> 
+                        break;
+                    case "GitHub":
+                        <a class="btn btn-default btn-round btn-lg btn-icon" href="@item.Url" rel="tooltip" title="Follow me on @item.Title">
+                            <i class="fa fa-twitter"></i>
+                        </a> 
+                        break;
+                    default:
+                        <a class="btn btn-default btn-round btn-lg btn-icon" href="@item.Url" rel="tooltip" title="Follow me on @item.Title">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                        break;
+                }
+            }
+            
         </div>
     </div>
 </div>
