--- a/ResumeMvc/Views/Shared/Components/ProfessionalExperiences/ProfessionalExperiences.cshtml
+++ b/ResumeMvc/Views/Shared/Components/ProfessionalExperiences/ProfessionalExperiences.cshtml
@@ -9,7 +9,7 @@
                 <div class="row">
                     <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
-                            <p>@item.StartDate - @item.EndDate</p>
+                            <p>@item.StartDate.ToString("MM/dd/yyyy") - @item.EndDate.ToString("MM/dd/yyyy")</p>
                             <div class="h5">@item.CompanyName</div>
                         </div>
                     </div>
@@ -19,6 +19,11 @@
                             @foreach (var task in item.Tasks)
                             {
                                 <p>@task.Title</p>
+                            }
+                            <div class="h3">Technologies</div>
+                            @foreach (var tech in item?.Technologies)
+                            {
+                                <p>@tech.Title</p>
                             }
                         </div>
                     </div>
