Some Clean code Fixes

--- a/ResumeMvc/Views/Shared/Components/Distinctions/Distinctions.cshtml
+++ b/ResumeMvc/Views/Shared/Components/Distinctions/Distinctions.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ResumeMvc.ViewModels.DistinctionViewModel>
 
-<div class="section">
+<div class="section" id="Distinctions">
     <div class="container cc-education">
         <div class="h4 text-center mb-4 title">Distinctions</div>
         @foreach (var item in Model)
