--- a/ResumeMvc/Views/Shared/Components/Languages/Languages.cshtml
+++ b/ResumeMvc/Views/Shared/Components/Languages/Languages.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ResumeMvc.ViewModels.LanguageViewModel>
 
-<div class="section" id="skill">
+<div class="section" id="Languages">
     <div class="container">
         <div class="h4 text-center mb-4 title">Languages</div>
         <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
