--- a/ResumeMvc/Views/Shared/Components/ProfessionalExperiences/ProfessionalExperiences.cshtml
+++ b/ResumeMvc/Views/Shared/Components/ProfessionalExperiences/ProfessionalExperiences.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ResumeMvc.ViewModels.ProfessionalExperienceViewModel>
 
-<div class="section" id="experience">
+<div class="section" id="Experiences">
     <div class="container cc-experience">
         <div class="h4 text-center mb-4 title">Work Experience</div>
         @foreach (var item in Model)
