--- a/ResumeMvc/Views/Shared/Components/Skills/Skills.cshtml
+++ b/ResumeMvc/Views/Shared/Components/Skills/Skills.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ResumeMvc.ViewModels.SkillViewModel>
 
-<div class="section" id="skill">
+<div class="section" id="skills">
     <div class="container">
         <div class="h4 text-center mb-4 title">Professional Skills</div>
         <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
