--- a/ResumeMvc/Views/Shared/Components/PersonalInformations/PersonalInformations.cshtml
+++ b/ResumeMvc/Views/Shared/Components/PersonalInformations/PersonalInformations.cshtml
@@ -17,7 +17,7 @@
         </div>
     </div>
 </div>
-<div class="section" id="about">
+<div class="section" id="BasicInformation">
     <div class="container">
         <div class="card" data-aos="fade-up" data-aos-offset="10">
             <div class="row">
