--- a/ResumeMvc/Views/Shared/_Layout.cshtml
+++ b/ResumeMvc/Views/Shared/_Layout.cshtml
@@ -30,11 +30,11 @@
                     </div>
                     <div class="collapse navbar-collapse justify-content-end" id="navigation">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#BasicInformation">Basic Information</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#skills">Skills</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#Languages">Languages</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#Distinctions">Distinctions</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#Experiences">Experiences</a></li>
                         </ul>
                     </div>
                 </div>
