Remove Name From Layout

--- a/ResumeMvc/Views/Shared/_Layout.cshtml
+++ b/ResumeMvc/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
     
     
     <footer class="footer">
-        <div class="h4 title text-center">El Ibaoui Otmane</div>
+        <div class="h4 title text-center">Otm El IB</div>
         <div class="text-center text-muted">
             <p>All rights reserved.</p>
         </div>
